# rcli

./: .gitignore  Cargo.toml  deny.toml  output.json  test.http
assets/: key
src/: lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64.rs  csv.rs  csv_opts.rs  gen_pass.rs  gen_pass_opts.rs  http.rs  jwt.rs  mod.rs  opts.rs  text.rs
src/process/: base64.rs  csv_convert.rs  gen_pass.rs  http.rs  http_serve.rs  jwt.rs  mod.rs  text.rs
src/utils/: input_util.rs  mod.rs
