[package]
name = "template"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
csv = "1.3.1"
duckdb = { version = "1.3.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
