[package]
name = "rcli"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
blake3 = "1.8.2"
clap = { version = "4.5.40", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "3.0.0-pre.0", features = [
    "rand_core",
    "pkcs8",
    "alloc",
    "pem",
] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
zxcvbn = "3.1.0"
hex = "0.4.3"
chacha20poly1305 = { version = "0.10.1", features = ["alloc"] }
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
